# calculatepy

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  setup.py
calculatepy/: __init__.py  add.py  divide.py  multiply.py  subtract.py  type_fallback.py
