[project]
name = "calculatepy"
version = "0.7"
authors = [
  { name="Vijendra Kumar", email="skvijay007@gmail.com" },
]
description = "CalculatePy is the fundamental package for mathematical operations with Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]